--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: samExploreR package: high-performance read summarisation to
         count vectors with avaliability of sequencing depth reduction
         simulation
-Version: 1.0.3
-Depends: ggplot2,pBrackets,colorspace
+Version: 1.0.4
+Depends: ggplot2,pBrackets,colorspace,R (>= 3.1.0)
 Author: Alexey Stupnikov, Shailesh Tripathi and Frank Emmert-Streib with contributions from Wei Shi and Yang Liao
 Maintainer: Alexey Stupnikov,Shailesh Tripathi <shailesh.tripathy@gmail.com>
 Description: This R package is designed for subsampling procedure to
