--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,14 @@
 Package: samExploreR
 Type: Package
-Title: samExploreR package: high-performance read summarisation to
-        count vectors with avaliability of sequencing depth reduction
-        simulation
-Version: 1.0.4
+Title: samExploreR package: high-performance read summarisation to count vectors with avaliability of sequencing depth reduction simulation
+Version: 1.0.5
 Depends: ggplot2,pBrackets,colorspace,R (>= 3.1.0)
 Author: Alexey Stupnikov, Shailesh Tripathi and Frank Emmert-Streib with contributions from Wei Shi and Yang Liao
 Maintainer: Alexey Stupnikov,Shailesh Tripathi <shailesh.tripathy@gmail.com>
-Description: This R package is designed for subsampling procedure to
-		simulate sequencing experiments with reduced sequencing depth.
-		This package can be used to anlayze data generated from all
-		major sequencing platforms such
-        as Illumina GA/HiSeq/MiSeq, Roche GS-FLX, ABI SOLiD and
-        LifeTech Ion PGM/Proton sequencers. It supports multiple
-        operating systems incluidng Linux, Mac OS X, FreeBSD and
-        Solaris.
-		Was developed with usage of Rsubread 1.16.1
-URL:
+Description: This R package is designed for subsampling procedure to simulate sequencing experiments with reduced sequencing depth. This package can be used to anlayze data generated from all major sequencing platforms such as Illumina GA, HiSeq, MiSeq, Roche GS-FLX, ABI SOLiD and LifeTech Ion PGM Proton sequencers. It supports multiple operating systems incluidng Linux, Mac OS X, FreeBSD and Solaris. Was developed with usage of Rsubread 1.16.1
 License: GPL-3
 LazyLoad: yes
 Suggests: BiocStyle,RUnit,BiocGenerics,Matrix
-biocViews: Sequencing, SequenceMatching, RNASeq, ChIPSeq, DNASeq,
-        WholeGenome, GeneTarget, Alignment, GeneExpression,
-        GeneticVariability, GeneRegulation, Preprocessing,
-        GenomeAnnotation, Software
+biocViews: Sequencing, SequenceMatching, RNASeq, ChIPSeq, DNASeq, WholeGenome, GeneTarget, Alignment, GeneExpression, GeneticVariability, GeneRegulation, Preprocessing, GenomeAnnotation, Software
 Packaged: 2016-07-19 13:59:18 UTC; stripathi
 NeedsCompilation: yes
