--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,3 @@
-#useDynLib(samExploreR,.registration = TRUE, .fixes = "C_")
-useDynLib(samExploreR)
+useDynLib(samExploreR,.registration = TRUE, .fixes = "C_")
 import(ggplot2)
 exportPattern("^[^\\.]")
