--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,6 @@ import(ggplot2)
 import(edgeR)
 exportPattern("^[^\\.]")
 export("samExplore")
+export("plotsamExplorer")
+export(exploreRep")
+export("exploreRob")
