--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,5 @@ import(edgeR)
 exportPattern("^[^\\.]")
 export("samExplore")
 export("plotsamExplorer")
-export(exploreRep")
+export("exploreRep")
 export("exploreRob")
