--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@ import(ggplot2)
 import(edgeR)
 import(Rsubread)
 import(colorspace)
+importFrom("grDevices", "hcl")
+importFrom("stats", "aov", "runif")
 exportPattern("^[^\\.]")
 export("samExplore")
 export("plotsamExplorer")
