--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ import(ggplot2)
 import(edgeR)
 import(Rsubread)
 import(colorspace)
+import("grDevices")
 importFrom("grDevices", "hcl")
 importFrom("stats", "aov", "runif")
 exportPattern("^[^\\.]")
