--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ import(edgeR)
 import(Rsubread)
 import(colorspace)
 import("grDevices")
+import("stats")
 importFrom("grDevices", "hcl")
 importFrom("stats", "aov", "runif")
 exportPattern("^[^\\.]")
