--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,23 @@
 Package: samExploreR
 Type: Package
-Title: samExploreR package: high-performance read summarisation to count vectors with avaliability of sequencing depth reduction simulation
-Version: 0.99.50
-Depends: ggplot2,pBrackets,colorspace,Rsubread, edgeR,R (>= 3.3.0)
-Author: Alexey Stupnikov, Shailesh Tripathi and Frank Emmert-Streib with contributions from Wei Shi and Yang Liao
+Title: samExploreR package: high-performance read summarisation to count vectors with 
+       avaliability of sequencing depth reduction simulation.
+Version: 0.99.51
+Depends: ggplot2,Rsubread, edgeR,R (>= 3.3.0)
+Author: Alexey Stupnikov, Shailesh Tripathi and Frank Emmert-Streib
 Maintainer: shailesh tripathi <shailesh.tripathy@gmail.com>
-Description: This R package is designed for subsampling procedure to simulate sequencing experiments with reduced sequencing depth. This package can be used to anlayze data generated from all major sequencing platforms such as Illumina GA, HiSeq, MiSeq, Roche GS-FLX, ABI SOLiD and LifeTech Ion PGM Proton sequencers. It supports multiple operating systems incluidng Linux, Mac OS X, FreeBSD and Solaris. Was developed with usage of Rsubread 1.16.1
-Imports: grDevices,stats 
+Description: This R package is designed for subsampling procedure 
+        to simulate sequencing experiments with reduced sequencing depth. 
+        This package can be used to anlayze data generated from all major 
+        sequencing platforms such as Illumina GA, HiSeq, 
+        MiSeq, Roche GS-FLX, ABI SOLiD and LifeTech Ion 
+        PGM Proton sequencers. It supports multiple operating systems 
+        incluidng Linux, Mac OS X, FreeBSD and Solaris. 
+        Was developed with usage of Rsubread.
 License: GPL-3
 LazyLoad: yes
 Suggests: BiocStyle,RUnit,BiocGenerics,Matrix
-biocViews: Sequencing, SequenceMatching, RNASeq, ChIPSeq, DNASeq, WholeGenome, GeneTarget, Alignment, GeneExpression, GeneticVariability, GeneRegulation, Preprocessing, GenomeAnnotation, Software
+biocViews: Sequencing, SequenceMatching, RNASeq, ChIPSeq, DNASeq, 
+        WholeGenome, GeneTarget, Alignment, GeneExpression, 
+        GeneticVariability, GeneRegulation, Preprocessing, 
+        GenomeAnnotation, Software
