--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,10 @@
 import(ggplot2)
 import(edgeR)
 import(Rsubread)
-import(colorspace)
-import("grDevices")
-import("stats")
-importFrom("grDevices", "hcl")
+#import(colorspace)
+#import("grDevices")
+#import("stats")
+#importFrom("grDevices", "hcl")
 importFrom("stats", "aov", "runif")
 exportPattern("^[^\\.]")
 export("samExplore")
