--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@ import(ggplot2)
 import(edgeR)
 import(Rsubread)
 #import(colorspace)
-#import("grDevices")
-#import("stats")
+import("grDevices")
+import("stats")
 #importFrom("grDevices", "hcl")
+importFrom("grDevices", "hcl")
+importFrom("graphics", "plot")
 importFrom("stats", "aov", "runif")
 exportPattern("^[^\\.]")
 export("samExplore")
