--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@ import(ggplot2)
 import(edgeR)
 import(Rsubread)
 #import(colorspace)
-import("grDevices")
-import("stats")
+import(grDevices)
+import(stats)
+import(graphics)
 #importFrom("grDevices", "hcl")
 importFrom("grDevices", "hcl")
 importFrom("graphics", "plot")
