--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(Rsubread)
 import(grDevices)
 import(stats)
 import(graphics)
+import(RNAseqData.HNRNPC.bam.chr14)
 #importFrom("grDevices", "hcl")
 importFrom("grDevices", "hcl")
 importFrom("graphics", "plot")
